--- a/html/about.html
+++ b/html/about.html
@@ -1,191 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href=" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg"
-      type="image/x-icon"
-    />
-    <!-- Bootstrap's styling -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <!-- Custom's styling -->
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>About</title>
-  </head>
-  <body>
-    <!-- Start of Navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img
-            src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg"
-            alt="logo"
-            loading="lazy"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./products.html">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./checkout.html">Checkout
-                <span class="badge rounded-pill bg-success" counter>
-                  0
-                </span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href=" https://asheekasamuels.github.io/All-Images/images/LOGO.png"
+    type="image/x-icon" />
+  <!-- Bootstrap's styling -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- Custom's styling -->
+  <link rel="stylesheet" href="../css/style.css" />
+  <title>About</title>
+</head>
+
+<body>
+  <!-- Start of Navbar -->
+  <nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="https://asheekasamuels.github.io/All-Images/images/LOGO.png" alt="logo" loading="lazy" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./checkout.html">Checkout
+              <span class="badge rounded-pill bg-success" counter>
+                0
+              </span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./admin.html">Admin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End of Navbar -->
+
+  <!-- Start of About -->
+
+  <main class="container-fluid3">
+    <h2 class="display-2">About Us</h2>
+    <div class="container3">
+      <div class="box" id="box1">
+        <h3 id="head3">Our Story:</h3>
+        <p id="p2">
+          Discover the sweet journey behind Candytopia. Born from a love of confectionery, our founder, Asheeka
+          Samuels, turned a passion for creating scrumptious sweets into a thriving candy shop. Explore our curated
+          collection of handmade candies and bring a touch of personalized sweetness to your life. Crafting sweet
+          treats, one piece at a time.
+
+        </p>
+      </div>
+      <div class="box" id="box1">
+        <h3 id="head3">Our Mission:</h3>
+        <p id="p2">
+          At Candytopia, our mission is to spread joy and happiness through the art of confectionery. We aim to create
+          a world where every moment is a sweet celebration, where every bite transports you to a world of wonder and
+          delight. Our vision is to be the sweetest destination in town, where memories are made, and moments are
+          savored. To inspire a sense
+          of wonder and awe in every customer, every day.
+
+        </p>
+      </div>
+      <div class="box" id="box1">
+        <h3 id="head3">Our Team:</h3>
+        <p id="p2">
+          At Candytopia, our team is a tight-knit family united by a passion for confectionery and a love for crafting
+          sweet treats that bring joy to all. We foster a culture of collaboration, innovation, and attention to detail.
+          Each member brings a unique skill set, contributing to the vibrant tapestry of our candy culture. Together, we
+          are dedicated to delivering personalized, high-quality candies that reflect the heart and soul of Candytopia.
+          We believe that every piece of candy has a story to tell, and we're committed to helping you write
+          yours.
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Contact</h3>
+        <p>Email: asheekasamuels@icloud.com</p>
+        <p>Phone: 067 623 5929</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Address</h3>
+        <p>314 Imam Haron, Rd Landsowne</p>
+        <p>Cape Town, Western Cape, 7780</p>
+        <p>South Africa</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Social Media</h3>
+        <ul class="social-media">
+          <div class="main">
+            <div class="up">
+              <a href="https://www.instagram.com/asheekasamuels?igsh=MXVsdGpmYWgzOXhwYQ%3D%3D&utm_source=qr"
+                target="_blank">
+                <button class="card1">
+                  <img src="https://i.postimg.cc/kMcFp9fn/icons8-instagram-32.png" alt="Instagram" class="instagram">
+                </button>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./admin.html">Admin</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- End of Navbar -->
+              <a href=" https://www.facebook.com/profile.php?id=100080682013385&mibextid=AEUHqQ" target="_blank">
+                <button class="card2">
+                  <img src="https://i.postimg.cc/Kjtgy7yk/icons8-facebook-32.png" alt="Facebook" class="facebook">
+                </button>
+              </a>
+            </div>
+            <div class="down">
+              <a href="https://github.com/asheekasamuels" target="_blank">
 
-    <!-- Start of About -->
+                <button class="card3">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px" class="github">
+                    <path
+                      d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z">
+                    </path>
+                  </svg>
+                </button>
+              </a>
+              <a href="http://www.linkedin.com/in/asheeka-samuels" target="_blank">
 
-    <main class="container-fluid3">
-      <h2 class="display-2">About Us</h2>
-      <div class="container3">
-        <div class="box" id="box1">
-          <h3 id="head3">Our Story:</h3>
-          <p id="p2">
-            Discover the sweet journey behind The Cake Studio. Born from a love
-            of baking, our founder, Asheeka Samuels, turned a passion for
-            creating delicious treats into a thriving cake shop. Explore our
-            curated collection of custom cakes and bring a touch of personalized
-            sweetness to your celebrations. Crafting edible stories, one cake at
-            a time
-          </p>
-        </div>
-        <div class="box" id="box1">
-          <h3 id="head3">Our Mission:</h3>
-          <p id="p2">
-            The Cake Studio's purpose is to inspire and enhance the art of cake
-            decorating by offering thoughtfully crafted and personalized cakes
-            for any occasion. We believe that every celebration has a unique
-            story to tell, and our purpose is to provide individuals with the
-            means to express their creativity and make their events even more
-            special. With a commitment to quality ingredients, authenticity, and
-            customer satisfaction, The Cake Studio aims to create a delightful
-            and indulgent experience in every cake, turning treats into edible
-            masterpieces that reflect the joy and stories of those who indulge
-            in them.
-          </p>
-        </div>
-        <div class="box" id="box1">
-          <h3 id="head3">Our Team:</h3>
-          <p id="p2">
-            At The Cake Studio, our team is a tight-knit family united by a
-            passion for baking and a love for crafting sweet stories through
-            cakes. We foster a culture of collaboration, innovation, and
-            attention to detail. Each member brings a unique skill set,
-            contributing to the vibrant tapestry of our bakery culture.
-            Together, we are dedicated to delivering personalized, high-quality
-            cakes that reflect the heart and soul of The Cake Studio
-          </p>
-        </div>
+                <button class="card4">
+                  <img src="https://i.postimg.cc/WzXGF6hD/icons8-linkedin-32.png" alt="LinkedIn" class="linkedin">
+                </button>
+              </a>
+            </div>
+        </ul>
       </div>
-    </main>
-    <footer class="container-fluid">
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Contact</h3>
-          <p>Email: asheekasamuels@icloud.com</p>
-          <p>Phone: 067 623 5929</p>
-        </div>
-        <div class="col-md-4">
-          <h3>Address</h3>
-          <p>314 Imam Haron, Rd Landsowne</p>
-          <p>Cape Town, Western Cape, 7780</p>
-          <p>South Africa</p>
-        </div>
-        <div class="col-md-4">
-          <h3>Social Media</h3>
-          <ul class="social-media">
-            <div class="main">
-              <div class="up">
-                  <a href="https://www.instagram.com/asheekasamuels?igsh=MXVsdGpmYWgzOXhwYQ%3D%3D&utm_source=qr" target="_blank">
-                      <button class="card1">
-                          <img src="https://i.postimg.cc/kMcFp9fn/icons8-instagram-32.png" alt="Instagram" class="instagram">
-                      </button>
-                  </a>
-                  <a href=" https://www.facebook.com/profile.php?id=100080682013385&mibextid=AEUHqQ" target="_blank">
-                      <button class="card2">
-                          <img src="https://i.postimg.cc/Kjtgy7yk/icons8-facebook-32.png" alt="Facebook" class="facebook">
-                      </button>
-                  </a>
-              </div>
-              <div class="down">
-                  <a href="https://github.com/asheekasamuels" target="_blank">
-  
-                      <button class="card3">
-                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px"
-                              class="github">
-                              <path
-                                  d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z">
-                              </path>
-                          </svg>
-                      </button>
-                  </a>
-                  <a href="http://www.linkedin.com/in/asheeka-samuels" target="_blank">
-  
-                      <button class="card4">
-                          <img src="https://i.postimg.cc/WzXGF6hD/icons8-linkedin-32.png" alt="LinkedIn" class="linkedin">
-                      </button>
-                  </a>
-              </div>
-          </ul>
-        </div>
-        <p class="lead">The Cake Studio &copy; <span currentYear></span></p>
-      </div>
-    </footer>
-    <!-- Bootstrap's script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Custom's script -->
-    <script>
-      // current year
-      document.querySelector("[currentYear]").textContent =
-        new Date().getUTCFullYear();
-    </script>
-  </body>
+      <p class="lead">Candytopia &copy; <span currentYear></span></p>
+    </div>
+  </footer>
+  <!-- Bootstrap's script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <!-- Custom's script -->
+  <script>
+    // current year
+    document.querySelector("[currentYear]").textContent =
+      new Date().getUTCFullYear();
+  </script>
+</body>
+
 </html>
