--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
-        <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/LOGO.png" type="image/x-icon">
         <!-- Bootstrap's styling -->
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html"> 
-            <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
+            <img src="https://asheekasamuels.github.io/All-Images/images/LOGO.png" alt="logo" loading="lazy">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,32 +54,34 @@
       <main class="container-fluid1">
         <div class="row">
             <h2 class="display-2">
-                Welcome To The Cake Studio
+                Welcome To Candytopia
             </h2>
         </div>
         <section class="featured-products py-5">
           <div class="container">
-            <h2 class="text-center mb-5">Best Seller</h2>
-            <h5> Floral Twenty First Two Tier Cake</h5>
+            <h2 class="text-center mb-5">Best Sellers</h2>
             <div class="row">
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/cake1.jpg" class="card-img-top" alt="Product 1" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/BUBSSweetAndSourMix.png" class="card-img-top" alt="Product 1" />
                   <div class="card-body">
+                    <p class="card-text">BUBS Sweet And Sour Mix.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/cake2.jpg" class="card-img-top" alt="Product 2" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/BUBSDizzySkulls.png" class="card-img-top" alt="Product 2" />
                   <div class="card-body">
+                    <p class="card-text">BUBS Dizzy Skulls.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/cake3.jpg" class="card-img-top" alt="Product 3" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/BUBSSourSquids.png" class="card-img-top" alt="Product 3" />
                   <div class="card-body">
+                    <p class="card-text">BUBS Sour Squids.</p>
                   </div>
                 </div>
               </div>
@@ -138,7 +140,7 @@
                 </div>
             </ul>
           </div>
-          <p class="lead">The Cake Studio &copy; 
+          <p class="lead">Candytopia &copy; 
             <span currentYear></span></p>
         </div>
       </footer>
